<resources>
    <string name="app_name" translatable="false">FaceDetection</string>
    <string name="select_picture_info">Select picture to detect faces</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="people">people:</string>
    <string name="adults">adults:</string>
    <string name="children">children:</string>
    <string name="error_something_went_wrong">"Something went wrong. Try again."</string>
    <string name="face_detection">Face detection</string>
    <string name="age_estimation">Age estimation</string>
    <string name="gender">Gender</string>
    <string name="pixelization">Pixelization</string>
    <string name="grayscale">Grayscale</string>
    <string name="error_picture_too_large">Picture too large. Max picture size: </string>
    <string name="info_api_usage_part_one">You have used </string>
    <string name="info_api_usage_part_two"> of your queries.</string>
    <string name="info_remaining_queries_part_one">You still have </string>
    <string name="info_remaining_queries_part_two"> remaining queries. </string>
    <string name="close">Close</string>
    <string name="api_usage">API usage</string>
    <string name="change_api_key">Change API key</string>
    <string name="change_api_key_info_1">The following app uses imgbb.com API. You have to have your own imgbb.com account so you can use your dedicated API key - then all of your images will be uploaded to your account.</string>
    <string name="change_api_key_info_2">Only you will be able to see your API key</string>
    <string name="go_to_website">Go to imgbb.com</string>
    <string name="paste_your_api_key">paste your API key</string>
    <string name="api_key_valid">API key has been saved</string>
    <string name="api_key_invalid">API key is invalid and can not be used</string>
    <string name="api_key_empty">Paste your API key</string>
    <string name="api_key_error">API key can not be confirmed. Check your internet connection</string>
    <string name="image_saved_successfully">Image has been saved</string>
    <string name="automatically_delete_images">Automatically delete uploaded images within 1 minute</string>
    <string name="sepia">Sepia</string>
    <string name="mirror_image">Mirror image</string>
    <string name="upside_down">Upside down</string>
    <string name="negative">Negative</string>
</resources>