<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_change_api_key_loading_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:translationZ="90dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:indeterminateDrawable="@drawable/progress_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_change_api_key_info_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/change_api_key_info_1"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/activity_change_api_key_go_to_website"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_background_transparent"
            android:paddingHorizontal="20dp"
            android:text="@string/go_to_website"
            app:cornerRadius="50dp"
            app:iconGravity="textStart" />

        <EditText
            android:id="@+id/activity_change_api_key_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/text_field"
            android:hint="@string/paste_your_api_key"
            android:maxLines="1"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:singleLine="true"
            android:textColor="@color/black_transparent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_change_api_key_info_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/change_api_key_info_2"
            android:textAlignment="center"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/activity_change_api_key_image_expiration_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="40dp"
            android:checked="true"
            android:gravity="center"
            android:text="@string/automatically_delete_images" />

        <Button
            android:id="@+id/activity_change_api_key_button_change"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background_transparent"
            android:paddingHorizontal="20dp"
            android:text="@string/change_api_key"
            app:cornerRadius="50dp"
            app:iconGravity="textStart" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>