<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:id="@+id/image_processing_options"
    android:background="@color/blue_dark"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/option_face_detection"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:padding="8dp"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/ic_baseline_crop_free_24"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:tint="@color/blue_option_on" />

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/face_detection"
                android:textColor="@color/blue_option_on"
                android:textStyle="bold"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/option_age_estimation"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:padding="8dp"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/ic_baseline_30fps_24"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_estimation"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/option_pixelization"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:padding="8dp"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/ic_baseline_apps_24"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pixelization"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</HorizontalScrollView>