<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/api_usage_layout_percentage_usage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/api_usage_layout_percentage_usage_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/api_usage_layout_usage_info"
            app:layout_constraintEnd_toStartOf="@+id/api_usage_layout_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="30" />

        <TextView
            android:id="@+id/api_usage_layout_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="%"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/api_usage_layout_usage_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/api_usage_layout_percentage_usage"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/api_usage_layout_usage_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/api_usage_layout_percentage_usage">

        <TextView
            android:id="@+id/api_usage_layout_info_usage_part_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_api_usage_part_one"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/api_usage_layout_used_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4sp"
            android:layout_toEndOf="@+id/api_usage_layout_info_usage_part_one"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="30" />

        <TextView
            android:id="@+id/api_usage_layout_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/api_usage_layout_used_value"
            android:text="/"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/api_usage_layout_limit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4sp"
            android:layout_toEndOf="@+id/api_usage_layout_of"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="100" />

        <TextView
            android:id="@+id/api_usage_layout_info_usage_part_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/api_usage_layout_limit_value"
            android:text="@string/info_api_usage_part_two"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/api_usage_layout_info_remaining_queries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/api_usage_layout_usage_info">

        <TextView
            android:id="@+id/api_usage_layout_info_remaining_queries_part_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_remaining_queries_part_one"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/api_usage_layout_remaining_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4sp"
            android:layout_marginEnd="4sp"
            android:layout_toEndOf="@+id/api_usage_layout_info_remaining_queries_part_one"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="70" />

        <TextView
            android:id="@+id/api_usage_layout_info_remaining_queries_part_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/api_usage_layout_remaining_value"
            android:text="@string/info_remaining_queries_part_two"
            android:textSize="14sp" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/api_usage_layout_button_close"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/close"
        app:cornerRadius="50dp"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/api_usage_layout_info_remaining_queries" />

</androidx.constraintlayout.widget.ConstraintLayout>